Fix spacing of tree image in navbar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .nav-bar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: #478978;
   color: #D6EDFF;
